# devsetup

./: .gitignore  Dockerfile.debian-tester  Makefile  README.md  ansible.cfg  mise.toml  pyproject.toml
.github/workflows/: ci.yml
scripts/: bootstrap.sh
tests/: test_bootstrap.py  test_tools.py
