[project]
name = "devsetup"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ansible>=13.0.0",
]

[dependency-groups]
dev = [
    "ansible-lint>=25.12.0",
    "pytest>=9.0.1",
    "ruff>=0.14.7",
    "testinfra>=6.0.0",
]
